# twinpark

./: LICENSE  README.md
control_actor/traj_server/: CMakeLists.txt  package.xml
control_actor/traj_server/launch/: server.launch
control_actor/traj_server/scripts/: traj_server.py
control_actor/vehicle_control/: CMakeLists.txt  package.xml
control_actor/vehicle_control/launch/: control.launch
control_actor/vehicle_control/logs/: guided_mppi_log_20251216_200755.csv  guided_mppi_log_20251216_203713.csv  guided_mppi_log_20251216_205456.csv  guided_mppi_log_20251216_210648.csv  mppi_log.csv  mppi_log_20251209_195723.csv  mppi_log_20251209_200126.csv  mppi_log_20251209_200507.csv  mppi_log_20251209_201155.csv  mppi_log_20251209_201923.csv  mppi_log_20251212_172645.csv  mppi_log_20251212_203134.csv  mppi_log_20251212_211302.csv  mppi_log_20251212_211925.csv  mppi_log_20251212_212329.csv  mppi_log_20251212_212418.csv  mppi_log_20251212_213011.csv  mppi_log_20251212_213020.csv  mppi_log_20251212_214435.csv  mppi_log_20251212_214914.csv  mppi_log_20251212_221505.csv  mppi_log_20251212_222439.csv  mppi_log_20251212_224618.csv  mppi_log_20251212_225047.csv  mppi_log_20251212_230429.csv  mppi_log_20251212_230521.csv  mppi_log_20251212_231319.csv  mppi_log_20251213_162623.csv  mppi_log_20251213_164958.csv  mppi_log_20251213_165737.csv  mppi_log_20251213_171108.csv  mppi_log_20251213_172340.csv  mppi_log_20251213_174324.csv  mppi_log_20251213_174749.csv  mppi_log_20251213_175006.csv  mppi_log_20251213_175349.csv  mppi_log_20251213_175803.csv  mppi_log_20251213_181036.csv  mppi_log_20251213_181411.csv  mppi_log_20251213_181747.csv  (+56 more)
control_actor/vehicle_control/scripts/: ackermann_controller.py  ackermann_controller.py.bak  control.py  hybrid_Astar_mppi_control.py  hybrid_Astar_mppi_control_velocity.py  mppi.py  mppi_control.py  mppi_control_v1.py  mppi_control_v2_t.py  pathtracking_kbm_obav.py  plot.py  plotInOne.py  plot_twin.py  plot_vir.py  run_mppi_with_pytorch.sh  test_custom_ackermann.py
parking_simulator/Utils/pose_utils/: CMakeLists.txt  package.xml  test_pose_utils.cpp
parking_simulator/Utils/pose_utils/include/pose_utils/: pose_utils.hpp
parking_simulator/Utils/vehicle_msgs/: CMakeLists.txt  package.xml
parking_simulator/Utils/vehicle_msgs/msg/: .gitkeep  AckermannCmd.msg  ControlCmd.msg  Trajectory.msg  VehicleState.msg
parking_simulator/carla_bridge/: CMakeLists.txt  package.xml
parking_simulator/carla_bridge/launch/: .gitkeep  carla_bridge.launch
parking_simulator/carla_bridge/scripts/: carla_bridge_py.py  carla_control_test.py
plan_eval/planner/: CMakeLists.txt  package.xml
plan_eval/planner/launch/: planner.launch
plan_eval/planner/planning/HybridAStar/: PolynomialInterpolation.py  car.py  dynamic_programming_heuristic.py  hybrid_a_star.py  plot.py  search.py  smooth.py
plan_eval/planner/planning/ReedsSheppPath/: reeds_shepp_path_planning.py
plan_eval/planner/planning/src/: draw.py
plan_eval/planner/scripts/: MPPI_parkingPNC.py  planner.py  planner_obs.py
plan_eval/rollout/: CMakeLists.txt  package.xml
twinpark_launch/: CMakeLists.txt  package.xml  test_launch.sh
twinpark_launch/config/: demo.yaml  twinpark.rviz
twinpark_launch/launch/: demo.launch
twinpark_launch/scripts/: visualization_node.py
