<?xml version="1.0"?>
<package format="2">
  <name>traj_server</name>
  <version>0.1.0</version>
  <description>Trajectory server for managing and interpolating reference trajectories</description>

  <maintainer email="dev@twinpark.com">TwinPark Developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>vehicle_msgs</depend>

  <export>
  </export>
</package>
