<?xml version="1.0"?>
<package format="2">
  <name>vehicle_control</name>
  <version>0.1.0</version>
  <description>Vehicle tracking control using Backstepping and PID</description>

  <maintainer email="dev@twinpark.com">TwinPark Developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vehicle_msgs</depend>
  <depend>pose_utils</depend>

  <export>
  </export>
</package>
